--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  
   background-color: #302f2f;
   width: 100%;
   border-radius: 20px;
@@ -92,6 +93,8 @@ body {
   padding: 5px;
   border-radius: 10px;
   position: relative;
+  display: flex;
+  flex-direction: column-reverse;
 }
 .inner-battery .main-battery::before {
   content: "";
